@@ -1205,24 +1205,19 @@ class AcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         network.getLine("l25").getTerminal1().disconnect();
         network.getLine("l25").getTerminal2().disconnect();
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease("l46", "g1"));
-        // no contingency for the moment
-        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), Collections.emptyList(), sensiParameters);
-        assertEquals(0.0, result.getBranchFlow1SensitivityValue("g1", "l46", SensitivityVariableType.INJECTION_ACTIVE_POWER), LoadFlowAssert.DELTA_POWER);
-        assertEquals(Double.NaN, result.getBranchFlow1FunctionReferenceValue("l46"), LoadFlowAssert.DELTA_POWER);
-        // with a contingency
+        // with contingency context all
         List<Contingency> contingencies = Collections.singletonList(new Contingency("l12", new BranchContingency("l12")));
-        factors = List.of(createBranchFlowPerInjectionIncrease("l46", "g1")); // all contingency context.
-        result = sensiRunner.run(network, factors, contingencies, Collections.emptyList(), sensiParameters);
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease("l46", "g1")); // all contingency context.
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, contingencies, Collections.emptyList(), sensiParameters);
         assertEquals(0.0, result.getBranchFlow1SensitivityValue("g1", "l46", SensitivityVariableType.INJECTION_ACTIVE_POWER), LoadFlowAssert.DELTA_POWER);
         assertEquals(Double.NaN, result.getBranchFlow1FunctionReferenceValue("l46"), LoadFlowAssert.DELTA_POWER);
         assertTrue(result.getValues("l12").isEmpty()); // nothing because invalid factor in pre contingency state.
         // with contingency context specific (no pre contingency state asked...)
         factors = List.of(createBranchFlowPerInjectionIncrease("l46", "g1", "l12")); // all contingency context.
         result = sensiRunner.run(network, factors, contingencies, Collections.emptyList(), sensiParameters);
-        assertEquals(0.0, result.getBranchFlow1SensitivityValue("g1", "l46", SensitivityVariableType.INJECTION_ACTIVE_POWER), LoadFlowAssert.DELTA_POWER);
-        assertEquals(Double.NaN, result.getBranchFlow1FunctionReferenceValue("l46"), LoadFlowAssert.DELTA_POWER);
-        assertTrue(result.getValues("l12").isEmpty()); // nothing because invalid factor in pre contingency state.
+        assertEquals(0.0, result.getBranchFlow1SensitivityValue("l12", "g1", "l46", SensitivityVariableType.INJECTION_ACTIVE_POWER), LoadFlowAssert.DELTA_POWER);
+        assertEquals(Double.NaN, result.getBranchFlow1FunctionReferenceValue("l12", "l46"), LoadFlowAssert.DELTA_POWER);
+        assertTrue(result.getValues(null).isEmpty()); // nothing because invalid factor in pre contingency state.
     }
 
     @Test
